--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,7 @@ h5 {
 /* Sidebar-section */
 .sidebar-section {
   background-color: #021530;
+  color:#fff;
   width: 370px;
   padding-top: 40px 0px;
 }
