--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,8 @@ body {
   color: #000000;
 }
 .projects-list-item-text {
+  display: inline-block;
+  margin: 2px 0;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -125,6 +127,7 @@ h4 {
   margin-top: 10px;
 }
 .Orange {
+  display: block;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
