--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Montserrat", sans-serif;
   background-color: #dadfe4;
+  margin: 0;
 }
 .main-container {
   display: flex;
@@ -12,7 +13,7 @@ body {
 }
 /* Main content */
 .main-content {
-  padding: 100px 200px 20px 90px;
+  padding: 40px 200px 20px 90px;
 }
 /* About me section */
 .about-me {
