--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,7 @@ h5 {
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
-  color: #fb6d3a;
+  color: #fff;
 }
 .Tech-skills-item-text {
   font-style: normal;
@@ -228,7 +228,7 @@ h5 {
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
-  color: #fb6d3a;
+  color: #fff;
 }
 .Soft-skills-item-text {
   font-style: normal;
